--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/native-stack": "^7.3.21",
     "axios": "^1.10.0",
     "expo": "~53.0.17",
+    "expo-constants": "~17.1.7",
     "expo-document-picker": "~13.1.6",
     "expo-router": "~5.1.3",
     "expo-status-bar": "~2.2.3",
     "prop-types": "^15.8.1",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
